Minor tweaks to words

--- a/outputs/paper/paper-copy.Rmd
+++ b/outputs/paper/paper-copy.Rmd
@@ -116,18 +116,19 @@ The remainder of this paper is structured as follows: in Section \@ref(methodolo
 
 Our primary dataset consists of pre-print metadata extracted from the arXiv, bioRxiv, medRxiv, and SocArXiv pre-print repositories via their respective Application Programming Interfaces (APIs). This metadata varies by repository, but generally includes the following information: title, abstract, author(s), date created, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, published DOI (if the pre-print has since been published in a peer-reviewed journal), and download link. The data collection process was conducted separately for COVID-19 and pre-COVID-19 papers. 
 
-For COVID-19-related pre-prints, we first created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2020, and 30 June, 2021. In the case of SocArXiv there are fields that are self-reported by the submitting author about the availability of code and data. We classified individual pre-prints as "COVID-19-related" based on whether they contained one or more of the following terms in their title or abstract (case insensitive): "COVID-19", "COVID 19", "corona virus", "coronavirus", "coronavirus-2", "SARS-CoV-2", "SARSCoV-2", or "2019-nCoV". Future work could make this keyword approach more systematic, for instance following @king2017computer. We then randomly sampled pre-prints for further analysis, except for SocArXiv for which we analyzed all pre-prints that matched the above criteria as there were only 410.
+For COVID-19-related pre-prints, we first created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2020, and 30 June, 2021. In the case of SocArXiv there are fields that are self-reported by the submitting author about the availability of code and data. We classified individual pre-prints as "COVID-19-related" based on whether they contained one or more of the following terms in their title or abstract (case insensitive): "COVID-19", "COVID 19", "corona virus", "coronavirus", "coronavirus-2", "SARS-CoV-2", "SARSCoV-2", or "2019-nCoV". We then randomly sampled pre-prints for further analysis, except for SocArXiv for which we analyzed all pre-prints that matched the above criteria as there were only 410.
 
-For pre-COVID-19 pre-prints, we created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2019, and December 31, 2019. Since medRxiv was launched in June 2019, we used all pre-print data from the latter half of 2019. We then randomly sampled 1,200 pre-prints from each repository's dataset for analysis, with the exception of medRxiv for which only 913 pre-prints were available over this time.
+For pre-COVID-19 pre-prints, we created a local copy of each repository containing all metadata for pre-prints posted between 1 January, 2019, and December 31, 2019. Since medRxiv was launched in June 2019, we used all pre-print data from the latter half of 2019. We then randomly sampled 1,200 pre-prints from each repository's dataset for analysis, except for medRxiv for which only 913 pre-prints were available over this time.
 
 
 ## Open data and code detection
 
-We checked our sampled pre-prints for open data and code markers using the Open Data Detection in Publications (ODDPub) text mining algorithm [@citePDDPub] within the `oddpub` R package [@citeODDPubpackage]. This required downloading each pre-print as a PDF, which we did using `heapsofpapers` [@citealexandermafouz], and then converting the PDFs to text files. Some papers from SocArXiv were only available in Word document format (.docx) and were downloaded as such and then converted to text format. We then conducted the open data and open code detection procedure which involved searching for keywords and other markers of open data and open code availability. A full listing of these markers is included in Appendix \@ref(markers). This was conducted using the `open_data_search()` function from the `oddpub` package. All of our workflow as conducted in the statistical programming language R [@citeR].
+We checked our sampled pre-prints for open data and code markers using the Open Data Detection in Publications (ODDPub) text mining algorithm [@citePDDPub] within the `oddpub` R package [@citeODDPubpackage]. This required downloading each pre-print as a PDF, which we did using `heapsofpapers` [@citealexandermafouz], and then converting the PDFs to text files. Some papers from SocArXiv were only available in Word document format (.docx) and were downloaded as such and then converted to text format. We then conducted the open data and open code detection procedure which involved searching for keywords and other markers of open data and open code availability. This was conducted using the `open_data_search()` function from the `oddpub` package. What constitutes open code or open data is complicated and discipline specific. The details of the `oddpub` approach are available in @riedel2020oddpub. The general criteria are that specific mention should be made of where the data and code are located, and that data should be as close to raw as possible. Our work was conducted using the statistical programming language R [@citeR].
 
 The result of this process is a dataset indicating the presence of open data or open code markers in each pre-print (with a logical vector for each marker, followed by the relevant open data or open code statements where applicable). Our final dataset was formed by joining this output with the original sample metadata, typically using the DOI or the unique file name, to form a dataset including all original, qualitative metadata for each pre-print alongside its open data and open code status and markers. 
 
-Although SocArXiv's metadata contained author-reported information concerning data and code availability for each pre-print, we elected to use the results of the ODDPub algorithm in our analysis to ensure comparability of results between pre-prints from all repositories. Notable discrepancies between the ODDPub algorithm and authors' self-reported data and code availability are documented in Appendix \@ref(socarxivissues).
+Although SocArXiv's metadata contained author-reported information concerning data and code availability for each pre-print, we elected to use the results of the ODDPub algorithm in our analysis to ensure comparability of results between pre-prints from all repositories. 
+<!-- Notable discrepancies between the ODDPub algorithm and authors' self-reported data and code availability are documented in Appendix \@ref(socarxivissues). -->
 
 ```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19", out.width="90%", fig.align = "center"}
 just_arxiv <- 
@@ -181,7 +182,7 @@ The number of pre-prints posted per month increased in the first half of 2020 ac
 
 ## Open data and code
 
-From the collection of all pre-prints related to COVID-19 we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, 1,000 from bioRxiv, and 410 from socArXiv. Broadly, we are unable to find markers of either open data for open code for 3,011 pre-prints or approximately 76 per cent of our sample (Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 7 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
+From the collection of all pre-prints related to COVID-19 we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, 1,000 from bioRxiv, and 410 from SocArXiv. Broadly, we are unable to find markers of either open data for open code for 3,011 pre-prints or approximately 76 per cent of our sample (Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 7 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
 
 Once differentiated by repository, we observe that open data and code markers were absent from 67 per cent of the sampled bioRxiv pre-prints, 79 per cent of the sampled medRxiv pre-prints, 75 per cent of the sampled arXiv pre-prints, and 85 per cent of all COVID-19-related SocArXiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Table \@ref(tab:summarycounts-repositories)). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 22 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are broadly similar to @mcguinness2021descriptive, who focus on medRxiv and find that 23 per cent describe open data.
 
@@ -451,11 +452,11 @@ published_open_status %>%
   
 ```
 
-It is important to note that our dataset likely imperfectly characterizes publication. In particular, it likely does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag (estimated at an average of around 60 days for COVID-19-related pre-prints, although that varies by discipline) that may especially skew the results for pre-prints in the latter portion of our sample [@kwon2020].
+It is important to note that our dataset likely imperfectly characterizes publication. It likely does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag (estimated at an average of around 60 days for COVID-19-related pre-prints, although that varies by discipline) that may especially skew the results for pre-prints in the latter portion of our sample [@kwon2020].
 
 ## Pre-pandemic pre-prints
 
-In order to examine the influence of the COVID-19 pandemic on open science practices in during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
+To examine the influence of the COVID-19 pandemic on open science practices in during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
 
 ```{r 2019-results}
 bio_2019 <- bio_2019_results %>%
@@ -485,7 +486,7 @@ all_2019 %>%
   ggplot(aes(x = month, fill = type)) + 
   geom_histogram(stat="count", position = "dodge2") +
   labs(title = "Pre-prints posted per month, 2019",
-       subtitle = "Total of 150,018 pre-prints on arXiv, 31,752 on bioRxiv, 913 on medRxiv, 1,614 on socArXiv",
+       subtitle = "Total of 150,018 pre-prints on arXiv, 31,752 on bioRxiv, 913 on medRxiv, and \n1,614 on socArXiv",
        x = "Month",
        y = "Number of pre-prints",
        fill = "Repository") +
@@ -534,11 +535,11 @@ all_2019 %>%
   group_rows(index = c("arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "socArXiv" = 4))
 ```
 
-Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase which may be expected as the repository gained recognition and popularity in the medical research community. The number of papers posted monthly to bioRxiv also saw an overall increase throughout 2019. It is important to note here that due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were been posted to medRxiv between June 2019 and 30 June, 2021, 13,194 (approximately 61 per cent) of which relate to COVID-19.
+Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase which may be expected as the repository gained recognition and popularity in the medical research community. The number of papers posted monthly to bioRxiv also saw an overall increase throughout 2019. It is important to note here that due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 (approximately 61 per cent) of which relate to COVID-19.
 
 Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). Both the bioRxiv and medRxiv rates are approximately four per cent lower than the corresponding proportions of COVID-19-related pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date ($\chi$^2^ = 4.8508, p < 0.005), as was open code availability for bioRxiv pre-prints ($\chi$^2^ = 14.491, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19. 
 
-On the other hand, the analyzed arXiv and socArXiv pre-prints from 2019 contain a lower proportion of open data and code markers overall than their COVID-19-related counterparts, with a decrease of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration *during* the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and socArXiv more consistently adhered to open science practices than their pre-pandemic counterparts ($\chi$^2^ = 93.124, arXiv open data;  $\chi$^2^ = 106.88, arXiv open code; $\chi$^2^ = 12.303, socArXiv open data; $\chi$^2^ = 8.1598, socArXiv open code; p < 0.005).
+On the other hand, the analyzed arXiv and SocArXiv pre-prints from 2019 contain a lower proportion of open data and code markers overall than their COVID-19-related counterparts, with a decrease of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration *during* the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and SocArXiv more consistently adhered to open science practices than their pre-pandemic counterparts ($\chi$^2^ = 93.124, arXiv open data;  $\chi$^2^ = 106.88, arXiv open code; $\chi$^2^ = 12.303, SocArXiv open data; $\chi$^2^ = 8.1598, SocArXiv open code; p < 0.005).
 
 
 ```{r 2019-published}
@@ -635,24 +636,24 @@ Open data is generally accepted to be beneficial to the scientific process, and 
 
 Open code as an open science marker is much more context and field-dependent, as not all biomedical research papers will rely on computational methods for their analyses. However, in pre-prints where code comprises a large portion of the methodology or results, posting it openly to repositories like GitHub contributes greatly to a pre-print's potential reproducibility. This gains importance as computational methods become increasingly popular in the rush to form predictions about emerging situations with limited data or laboratory research, which was the case for modelling studies in the early days of the COVID-19 pandemic. We also see growing concern over the quality and consequences of this sort of research, with bioRxiv no longer allowing purely computational work [@kwon2020].
 
-The other concern is the adverse selection issue caused by meeting the open science aims of sharing code and data. Authors that share their data and code open themselves up to criticism of their work because of this. If authors who make their data and code available make similar mistakes to authors who choose to not publish their data and code, it is more likely that the mistake would not be noticed in the case where data and code were not published. The current system is biased against those who follow best practice. Indeed @mcguinness2021descriptive advocate that '(s)trict editorial policies that mandate data sharing'.
+The other concern is the adverse selection issue caused by meeting the open science aims of sharing code and data. Authors that share their data and code open themselves up to criticism of their work because of this. If authors who make their data and code available make similar mistakes to authors who choose to not publish their data and code, it is more likely that the mistake would not be noticed in the case where data and code were not published. The current system is biased against those who follow best practice. Indeed @mcguinness2021descriptive advocate '(s)trict editorial policies that mandate data sharing'.
 
 
 ## The role of pre-print repositories
 
-There has been an enormous amount of research on COVID-19 [@da2021publishing]. Many concerns have arisen from the unprecedented rate at which COVID-19 research has been posted and consumed via pre-print repositories, particularly in the early stages of the pandemic [@raynaud2021].  Any rushed scientific research has potential to skip (or at least place less precedence on) open science practices, thus it may be reasonable to expect a decrease in open data or code markers in the pre-prints posted during times of increased overall posting to medRxiv. In our analysis, we found little relationship between date posted and likelihood of having open data or code markers with the proportion of pre-prints containing these markers fluctuating greatly from month to month and no apparent decrease during periods of increased publication. This suggests that open science practices are more influenced by other factors, perhaps training, publication bias, or the nature of the pre-print itself. On the other hand, we do not see an overall long-term increase in either open data or open code markers throughout our period of analysis which we may have expected in the context of the aforementioned open science movements the pandemic has fostered. Although not pre-print specific, @else2020 found that overall research output has fluctuated between different fields and topics (namely modelling disease spread, public health, diagnostics and testing, mental health, and hospital mortality) throughout different stages of the pandemic which may account for some of the fluctuation and overall lack of noticeable trend over the course of the year.
+There has been a large amount of research on COVID-19 [@da2021publishing]. Many concerns have arisen from the rate at which COVID-19 research has been posted and consumed via pre-print repositories, particularly in the early stages of the pandemic [@raynaud2021].  Any rushed scientific research has potential to skip (or at least place less precedence on) open science practices, thus it may be reasonable to expect a decrease in open data or code markers in the pre-prints posted during times of increased overall posting to medRxiv. In our analysis, we found little relationship between date posted and likelihood of having open data or code markers with the proportion of pre-prints containing these markers fluctuating greatly from month to month and no apparent decrease during periods of increased publication. This suggests that open science practices are more influenced by other factors, perhaps training, publication bias, or the nature of the pre-print itself. On the other hand, we do not see an overall long-term increase in either open data or open code markers throughout our period of analysis which we may have expected in the context of the aforementioned open science movements the pandemic has fostered. Although not pre-print specific, @else2020 found that overall research output has fluctuated between different fields and topics (namely modelling disease spread, public health, diagnostics and testing, mental health, and hospital mortality) throughout different stages of the pandemic which may account for some of the fluctuation and overall lack of noticeable trend over the course of the year.
 
 To emphasize the ongoing need for open data and code in modelling a pandemic, we consider two high profile epidemiological models that emerged in early 2020. Modelling was conducted by Imperial College London (ICL) [@ferguson2020] and the Institute for Health Metrics and Evaluation (IHME) at the University of Washington [@murray2020], and both were initially posted to pre-print repositories. The ICL model went on to become the most cited pre-print as of December 2020 [@else2020], and both had significant influence over policy and public health decisions worldwide [@adam2020]. An independent review of these two models by @jin2020 found that while code and data were openly available for both, only the ICL model was reproducible due to limited transparency on the underlying methodology of the IHME model. The open-source nature of these models was fundamental to reproduction attempts and is a great example of the need for open data and code in reproducing COVID-19 research, particularly in evaluating pre-prints as they begin to influence public decision-making. 
 <!-- In the context of the above factors, it was disheartening in our analysis to find that the proportion of modelling- and simulation-related pre-prints with open data or code increased only marginally from that of the entire sample. One might hope that modelling papers should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data.  -->
-Although our analysis was not particularly robust, this shows a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (of course subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic.
+Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (of course subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic.
 
 ## The importance of open data and open code
 
-Beyond pre-prints, COVID-19 has had great influence over publication and peer review processes as well, with expedited review timelines for COVID-19 papers at the expense of longer waits for other scientific research [@else2020]. Needless to say, it is important that open data and code standards be maintained in published work as well. Our findings in this regard were two-fold: that open data or code markers may not directly influence a pre-print's eventual publication, and that a lower proportion of published papers contain either open data or code markers than the general sample. Both of these raise concerns over publication bias, the potential that journals have favored novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. Concerns have already been raised through systemic reviews of COVID-19 publications [@raynaud2021], and oversights in data accessibility have led to high profile retractions of publications in the past, for example two papers from The Lancet and the New England Journal of Medicine that were withdrawn due to concerns over the private nature of their underlying dataset [@ledford2020].
+Beyond pre-prints, COVID-19 has had great influence over publication and peer review processes as well, with expedited review timelines for COVID-19 papers at the expense of longer waits for other scientific research [@else2020]. It is important that open data and code standards be maintained in published work as well. Our findings in this regard were two-fold: that open data or code markers may not directly influence a pre-print's eventual publication, and that a lower proportion of published papers contain either open data or code markers than the general sample. Both raise concerns over publication bias, the potential that journals have favored novel yet less transparent or reproducible papers over those with null results but a high standard of open science practices. Concerns have already been raised through systemic reviews of COVID-19 publications [@raynaud2021], and oversights in data accessibility have led to high profile retractions of publications in the past, for example papers from *The Lancet* and the *New England Journal of Medicine* were withdrawn due to concerns over the private nature of their underlying dataset [@ledford2020].
 
-In all fields of science, increasing access to data and code used for pre-printed or published research is a step in the direction of more transparent, reproducible, and reliable research. The ongoing COVID-19 pandemic has created a novel, constantly changing scientific culture that should be navigated with the utmost care so as to uphold standards of scientific practice for both the research community and the safety of the general public. Our analysis shows that there is much improvement to be made in the areas of open data and code availability within COVID-19 pre-print papers on arXiv, bioRxiv, medRxiv, and SocArXiv.
+In all fields of science, increasing access to data and code used for pre-printed or published research is a step in the direction of more transparent, reproducible, and reliable research. The ongoing COVID-19 pandemic has created a novel, constantly changing scientific culture that should be navigated with care to uphold standards of scientific practice for both the research community and the safety of the general public. Our analysis shows that there is room for improvement in the areas of open data and code availability within COVID-19 pre-print papers on arXiv, bioRxiv, medRxiv, and SocArXiv.
 
-Demand for timely research / results in high frequency as epidemic is rapidly evolving. Preprints are more efficient at doing this because there is no time spent on peer review. However, they also allow lesser-known researchers to better disperse their research, because of the possibility that fast-tracked peer review may be biased towards established researchers. While there is a clear need for pre-prints, the point remains that they do not go through the peer review process. This question of quality and validity is particularly pertinent in the COVID-19 context because poorly validated results and false information may spread quickly, and have real effects. We are not saying that peer review implies that a paper is of a high-quality, we are instead saying that the provision of code and data alongside the preprint goes some way to allowing others to trust the findings of pre-prints even though they have not been peer-reviewed. One way this could be encouraged would be for pre-print repositories to have authors characterize the extent to which they have adopted open science practices as part of their submission. Although those papers that do not adopt these practices should not be rejected from pre-print repositories, greater clarity around this would be useful and might move the state-of-the-art forward.
+There is demand for timely research and high frequency results because the pandemic rapidly evolved. Preprints are efficient in this role because there is no time spent on peer review. They also allow lesser-known researchers to better disperse their research, because of the possibility that fast-tracked peer review may be biased towards established researchers. While there is a clear need for pre-prints, the point remains that they do not go through the peer review process. This question of quality and validity is particularly pertinent in the COVID-19 context because poorly validated results and false information may spread quickly, and have real effects. We are not saying that peer review implies that a paper is of a high-quality, we are instead saying that the provision of code and data alongside the pre-print goes some way to allowing others to trust the findings of pre-prints even though they have not been peer-reviewed. One way this could be encouraged would be for pre-print repositories to have authors characterize the extent to which they have adopted open science practices as part of their submission, in the same way that is done in SocArXiv. Although those pre-prints that do not adopt these practices should not be rejected from pre-print repositories, greater clarity around this would be useful and might move the state-of-the-art forward.
 
 
 
@@ -660,27 +661,27 @@ Demand for timely research / results in high frequency as epidemic is rapidly ev
 
 <!-- In this paper we consider only pre-prints from medRxiv, but this analysis can and should be extended to other pre-print repositories including bioRxiv and arXiv. The `medrxivr` package [@citemedrxivr] can be used with the bioRxiv API as well, and our code can be modified to conduct the same scraping and text mining procedure as was used for medRxiv data. -->
 
-We wish to expand our analysis to consider the geographic distribution of research and the potential influence of different practices and policies concerning open science as pre-prints vary by location. This is important as the epicenter of the virus spread (and thus of scientific output) has shifted throughout the pandemic which has implications for our time-based analysis. 
+We wish to expand our analysis to consider the geographic distribution of research and the potential influence of different practices and policies concerning open science as pre-prints vary by location. This is important as the epicenter of the pandemic changed throughout the pandemic which has implications for our time-based analysis. 
 
 An important weakness to note is the potential presence of false negatives in indicators of publication in our dataset. @abdill2019 estimate that the false-negative rate may be as high as 37.5 per cent for data pulled from the bioRxiv API, meaning analysis of published papers may represent only a fraction of those that have actually been published. It is unclear to what extent this is the case for other repositories or what bias may exist in the subset of pre-prints for which publication was detected, as it is likely that this process relies on title-based text matching [@abdill2019]. It is also likely that some of our more recent sampled pre-prints will be published in future which we could not account for at the time of our data collection.
 
-We also recognize that this analysis relies heavily on text-based analysis which was not verified directly in most cases and may lead to higher levels of uncertainty. In future, we wish to take smaller sub-samples to validate factors like publication status or paper topic beyond simple keyword searches or API output.
+We also recognize that this analysis relies heavily on text-based analysis which was not verified directly in most cases and may lead to higher levels of uncertainty. The `oddpub` package was built to analyze biomedical publications and it may be that some of the differences that we find between repositories are due to this. In future, we wish to take smaller sub-samples to validate factors like publication status, paper topic, and open code and data status, beyond the approaches that we used here.
 
 \newpage
 
-# (APPENDIX) Appendix {-} 
+<!-- # (APPENDIX) Appendix {-}  -->
 
-# Markers
+<!-- # Markers -->
 
-Insert details on what markers the `oddpub::open_data_search()` uses. Include info here directly from package documentation (i.e. keywords/phrases used for text parsing)?
+<!-- Insert details on what markers the `oddpub::open_data_search()` uses. Include info here directly from package documentation (i.e. keywords/phrases used for text parsing)? -->
 
-# SocArXiv differences {#socarxivissues}
+<!-- # SocArXiv differences {#socarxivissues} -->
 
-Insert details...
+<!-- Insert details... -->
 
 
 
-\newpage
+<!-- \newpage -->
 
 
 # References
