--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,13 @@
+@article{riedel2020oddpub,
+  title={ODDPub--a Text-Mining Algorithm to Detect Data Sharing in Biomedical Publications},
+  author={Riedel, Nico and Kip, Miriam and Bobrov, Evgeny},
+  journal={Data Science Journal},
+  volume={19},
+  number={1},
+  year={2020},
+  publisher={Ubiquity Press}
+}
+
 @article{mcguinness2021descriptive,
   title={A descriptive analysis of the data availability statements accompanying medRxiv preprints and a comparison with their published counterparts},
   author={McGuinness, Luke A and Sheppard, Athena L},
