--- a/outputs/paper/paper-copy.Rmd
+++ b/outputs/paper/paper-copy.Rmd
@@ -96,7 +96,7 @@ arxivsamplecount [label =  'arXiv: 1,000 pre-prints']
 biorxivsamplecount [label =  'bioRxiv: 1,000 pre-prints']
 medrxivsamplecount [label =  'medRxiv: 1,500 pre-prints']
 socarxivsamplecount [label =  'SocArXiv: 478 pre-prints']
-opencodeanddata [label =  'Those with markers of open code and open data']
+opencodeanddata [label =  'Those with markers of open code or open data']
 arxivopencount [label =  'arXiv: 248 pre-prints']
 biorxivopencount [label =  'bioRxiv: 326 pre-prints']
 medrxivopencount [label =  'medRxiv: 320 pre-prints']
