Minor tweaks to the paper throughout

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,12 +1,3 @@
-@article{riedel2020oddpub,
-  title={ODDPub--a Text-Mining Algorithm to Detect Data Sharing in Biomedical Publications},
-  author={Riedel, Nico and Kip, Miriam and Bobrov, Evgeny},
-  journal={Data Science Journal},
-  volume={19},
-  number={1},
-  year={2020},
-  publisher={Ubiquity Press}
-}
 
 @article{mcguinness2021descriptive,
   title={A descriptive analysis of the data availability statements accompanying medRxiv preprints and a comparison with their published counterparts},
@@ -29,18 +20,6 @@
   year={2017},
   publisher={Wiley Online Library}
 }
-
-@article{da2021publishing,
-  title={Publishing volumes in major databases related to Covid-19},
-  author={da Silva, Jaime A Teixeira and Tsigaris, Panagiotis and Erfanmanesh, Mohammadamin},
-  journal={Scientometrics},
-  volume={126},
-  number={1},
-  pages={831--842},
-  year={2021},
-  publisher={Springer}
-}
-
 @article{da2021optimizing,
   title={Optimizing peer review to minimize the risk of retracting COVID-19-related literature},
   author={da Silva, Jaime A Teixeira and Bornemann-Cimenti, Helmar and Tsigaris, Panagiotis},
@@ -107,7 +86,7 @@ publications},
     volume = {19},
     number = {1},
     pages = {42},
-    doi = {http://doi.org/10.5334/dsj-2020-042},
+    doi = {10.5334/dsj-2020-042},
   }
 
 
@@ -134,16 +113,6 @@ publications},
     pages = {1686},
     doi = {10.21105/joss.01686},
   }
-
-@Manual{citeR,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2020},
-    url = {https://www.R-project.org/},
-  }
-
 @article{weissgerber2021automated,
   title={Automated screening of COVID-19 preprints: can we help authors to improve transparency and reproducibility?},
   author={Weissgerber, Tracey and Riedel, Nico and Kilicoglu, Halil and Labb{\'e}, Cyril and Eckmann, Peter and Ter Riet, Gerben and Byrne, Jennifer and Cabanac, Guillaume and Capes-Davis, Amanda and Favier, Bertrand and others},
